--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><html lang="en-us"><head>
-<script src="/vs/gameloader-helper.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/Mezzatu/archers@main/vs/gameloader-helper.js"></script>
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 <title>Ragdoll Archers</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Mezzatu/archers@main/style.css">
 <body>
 <div id="unity-container" class="unity-desktop">
 <canvas id="unity-canvas"></canvas>
@@ -23,11 +23,11 @@
 </div>
 <script>
     const buildUrl = "Build";
-    const loaderUrl = buildUrl + "/v111.loader.js";
+    const loaderUrl = buildUrl + "https://cdn.jsdelivr.net/gh/Mezzatu/archers@main/Build/v111.loader.js";
     const config = {
-      dataUrl: buildUrl + "/6697b6deba8b617c67b69c55dcd07cb1.data.unityweb",
-      frameworkUrl: buildUrl + "/0be3c3ee7115b26e1ae28e643afdf1f2.js.unityweb",
-      codeUrl: buildUrl + "/b3397c29f6878557c1c614cbf9e196ea.wasm.unityweb",
+      dataUrl: buildUrl + "https://cdn.jsdelivr.net/gh/Mezzatu/archers@main/Build/6697b6deba8b617c67b69c55dcd07cb1.data.unityweb",
+      frameworkUrl: buildUrl + "https://cdn.jsdelivr.net/gh/Mezzatu/archers@main/Build/0be3c3ee7115b26e1ae28e643afdf1f2.js.unityweb",
+      codeUrl: buildUrl + "https://github.com/Mezzatu/archers/blob/main/Build/b3397c29f6878557c1c614cbf9e196ea.wasm.unityweb%20b3397c29f6878557c1c614cbf9e196ea.wasm.unityweb",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "Ericetto",
       productName: "Ragdoll Archers",
